--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,3 +1,24 @@
 .login-form-section {
     background-color: #FFCD0073;
+    height: 100vh;
+}
+
+
+.login-row {
+    background-color: #FFCF00;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.login-form-section form {
+    background-color: #EBE2BE4D;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+
+.login-form-section form input {
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    font-size: 14px;
 }
