--- a/assets/css/common-operating-view.css
+++ b/assets/css/common-operating-view.css
@@ -45,7 +45,9 @@
 }
 
 #content-wrapper .btn-primary {
-    background-color: rgba(255, 205, 0, 0.46);
+    background: rgba(255, 205, 0, 0.42);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(10px);
     color: #000;
     border: 1px solid #D9D9D9;
 
@@ -56,8 +58,15 @@
 }
 
 #content-wrapper .overlay-btns-wrapper .dropdown-menu {
-    background-color: rgba(255, 205, 0, 0.46);
+    background: rgba(255, 205, 0, 0.42);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(10px);
     border: 1px solid #D9D9D9;
+}
+
+#content-wrapper .dropdown-btn:hover .dropdown-menu {
+    display: block;
+    top: 100%;
 }
 
 #content-wrapper .overlay-btns-wrapper .dropdown-items-heading {
@@ -70,7 +79,9 @@
 
 #content-wrapper .side-btns .side-btns-icon {
     padding: 8px;
-    background-color: rgba(255, 205, 0, 0.46);
+    background: rgba(255, 205, 0, 0.42);
+    backdrop-filter: blur(11.2px);
+    -webkit-backdrop-filter: blur(10px);
     border: 1px solid #F0EBEB;
     display: flex;
     align-items: center;
@@ -81,6 +92,13 @@
 
 .right-sidebar {
     background-color: #FFCD00BF;
+    backdrop-filter: blur(2px);
+}
+
+.right-sidebar .form-switch .form-check-input {
+    height: 1.5em;
+    width: 3em;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 @media (min-width: 992px) {
