--- a/assets/css/common-operating-view.css
+++ b/assets/css/common-operating-view.css
@@ -1,40 +1,3 @@
-.sidebar-brand img {
-    width: 44px;
-    height: 44px;
-}
-
-.sidebar-nav li a {
-    background-color: #FFCD0050;
-}
-
-.sidebar-nav li:not(:last-child) a {
-    margin-bottom: 12px;
-}
-
-.sidebar-nav li a i {
-    text-indent: 11px;
-}
-
-#wrapper {
-    transition: all 0.5s ease;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 0px;
-    width: 0;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background: #222;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
 #content-wrapper .map-iframe {
     width: 100%;
     height: 100vh;
@@ -73,6 +36,10 @@
     border-bottom: 1px solid #000;
 }
 
+#content-wrapper .overlay-btns-wrapper .dropdown-columns ul li * {
+    cursor: pointer;
+}
+
 #content-wrapper .side-btns {
     left: 16px;
 }
@@ -101,44 +68,6 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-@media (min-width: 992px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 60px;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 60px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    #wrapper {
-        padding-left: 60px;
-    }
-
-    #sidebar-wrapper {
-        width: 60px;
-    }
-}
-
-@media (max-width: 767px) {
-    #wrapper {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 0;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 250px;
-    }
+.toggle-btns-wrapper .toggle-btn * {
+    cursor: pointer;
 }
